graphite/graphite-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: graphite-sitespeed
    app.kubernetes.io/name: graphite
  name: graphite-sitespeed-statefulset
  namespace: sitespeed
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: graphite-sitespeed
      app.kubernetes.io/name: graphite
  serviceName: graphite
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: graphite-sitespeed
        app.kubernetes.io/name: graphite
    spec:
      containers:
      - env:
        - name: STATSD_INTERFACE
          value: udp
        - name: GRAPHITE_TIME_ZONE
          value: Etc/UTC
        image: graphiteapp/graphite-statsd:1.1.8-8
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: graphite-gui
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: graphite
        ports:
        - containerPort: 8080
          name: graphite-gui
          protocol: TCP
        - containerPort: 2003
          name: graphite-plain
          protocol: TCP
        - containerPort: 2003
          name: graphite-udp
          protocol: UDP
        - containerPort: 2004
          name: graphite-pickle
          protocol: TCP
        - containerPort: 2023
          name: aggregate-plain
          protocol: TCP
        - containerPort: 2024
          name: aggregate-pickl
          protocol: TCP
        - containerPort: 8125
          name: statsd
          protocol: UDP
        - containerPort: 8126
          name: statsd-admin
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: graphite-gui
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/graphite/conf/
          name: graphite-sitespeed-configmap
        - mountPath: /opt/statsd/config/tcp.js
          name: graphite-sitespeed-statsd-configmap
          subPath: config_tcp.js
        - mountPath: /opt/statsd/config/udp.js
          name: graphite-sitespeed-statsd-configmap
          subPath: config_udp.js
        - mountPath: /opt/graphite/storage/
          name: graphite-sitespeed-pvc
      dnsPolicy: ClusterFirst
      nodeSelector:
        use: sitespeed
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: graphite-sitespeed-configmap
        name: graphite-sitespeed-configmap
      - configMap:
          defaultMode: 420
          name: graphite-sitespeed-statsd-configmap
        name: graphite-sitespeed-statsd-configmap
      - name: graphite-sitespeed-pvc
        persistentVolumeClaim:
          claimName: graphite-sitespeed-pvc
  updateStrategy:
    type: RollingUpdate
