graphite/graphite-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: graphite-sitespeed
    app.kubernetes.io/name: graphite
  name: graphite-sitespeed-svc
  namespace: sitespeed
spec:
  ports:
  - name: graphite-pickle
    port: 2004
    protocol: TCP
    targetPort: 2004
  - name: graphite-plain
    port: 2003
    protocol: TCP
    targetPort: 2003
  - name: graphite-udp
    port: 2003
    protocol: UDP
    targetPort: 2003
  - name: graphite-gui
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: aggregate-plain
    port: 2023
    protocol: TCP
    targetPort: 2023
  - name: aggregate-pickl
    port: 2024
    protocol: TCP
    targetPort: 2024
  - name: statsd
    port: 8125
    protocol: UDP
    targetPort: 8125
  - name: statsd-admin
    port: 8126
    protocol: TCP
    targetPort: 8126
  selector:
    app.kubernetes.io/instance: graphite-sitespeed
    app.kubernetes.io/name: graphite
  sessionAffinity: None
  type: ClusterIP
