graphite/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphite-sitespeed-lb
  namespace: sitespeed
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  ports:
  - name: graphite-gui
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: graphite-sitespeed-svc
    app.kubernetes.io/name: graphite
  type: LoadBalancer
